[gd_scene load_steps=20 format=2]

[ext_resource path="res://assets/art/player/porpoise-vaquita/porpoise-vaquita-2.png" type="Texture" id=1]
[ext_resource path="res://assets/art/player/porpoise-vaquita/porpoise-vaquita-1.png" type="Texture" id=2]
[ext_resource path="res://scenes/actors/Player.gd" type="Script" id=3]
[ext_resource path="res://assets/art/player/4nickpick/shield.png" type="Texture" id=4]
[ext_resource path="res://assets/art/player/4nickpick/shield2.png" type="Texture" id=5]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "intimidate",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "hit",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 16.0553, 10 )

[sub_resource type="CapsuleShape2D" id=12]
radius = 4.50401
height = 21.0868

[sub_resource type="CircleShape2D" id=13]
radius = 18.7013

[sub_resource type="CircleShape2D" id=14]
radius = 21.9644

[node name="Player" type="KinematicBody2D"]
position = Vector2( -1.25989, 0 )
scale = Vector2( 5, 5 )
collision_mask = 26
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
playing = true

[node name="BoundaryDetection" type="CollisionShape2D" parent="."]
shape = SubResource( 11 )

[node name="HitBoxes" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="HitBoxes"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBoxes/Area2D"]
position = Vector2( 1.00792, 0 )
rotation = 1.5708
shape = SubResource( 12 )

[node name="ProjectileSpawner" type="Node2D" parent="."]
position = Vector2( 15, -0.251984 )
z_index = -1

[node name="CooldownTimer" type="Timer" parent="ProjectileSpawner"]
wait_time = 0.1
one_shot = true

[node name="Shield" type="Node2D" parent="."]

[node name="ActiveHitBox" type="Area2D" parent="Shield"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/ActiveHitBox"]
scale = Vector2( 1, 1 )
shape = SubResource( 13 )
disabled = true

[node name="Sprite" type="Sprite" parent="Shield/ActiveHitBox"]
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 4 )
__meta__ = {
"_editor_description_": "44"
}

[node name="PerfectHitBox" type="Area2D" parent="Shield"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield/PerfectHitBox"]
position = Vector2( 0, -0.0840881 )
shape = SubResource( 14 )
disabled = true

[node name="Sprite" type="Sprite" parent="Shield/PerfectHitBox"]
position = Vector2( 0.17818, 0 )
scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 5 )

[node name="PerfectDetectionTimer" type="Timer" parent="Shield"]
wait_time = 0.3
one_shot = true

[node name="PerfectCooldownTimer" type="Timer" parent="Shield"]
wait_time = 0.5
one_shot = true

[node name="RechargeDelayTimer" type="Timer" parent="Shield"]
wait_time = 3.0
one_shot = true

[node name="HitCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="PowerupTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
[connection signal="area_entered" from="HitBoxes/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="Shield/ActiveHitBox" to="." method="_on_ActiveHitBox_area_entered"]
[connection signal="area_entered" from="Shield/PerfectHitBox" to="." method="_on_PerfectHitBox_area_entered"]
[connection signal="timeout" from="Shield/PerfectDetectionTimer" to="." method="_on_PerfectDetectionTimer_timeout"]
[connection signal="timeout" from="Shield/PerfectCooldownTimer" to="." method="_on_PerfectCooldownTimer_timeout"]
[connection signal="timeout" from="HitCooldownTimer" to="." method="_on_HitCooldownTimer_timeout"]
[connection signal="timeout" from="PowerupTimer" to="." method="_on_PowerupTimer_timeout"]
